perf(experiments): group Java GPU projections